# model-viewer

./: .gitignore  PRD.md  README.md  mad  pyproject.toml
.github/instructions/: drawio-skill.instructions.md
docs/: examples.md  usage.md
src/model_viewer/: __init__.py  cli.py  diff.py  formatting.py  key_patterns.py  parsing.py  rendering.py  schema.py
tests/: test_model_viewer.py
tests/fixtures/: fused_b.json
tests/fixtures/model_a/: config.json
tests/fixtures/model_b/: config.json
